# NanoHatOLED

./: .gitignore  .gitmodules  README.md  deploy.sh  run_docker.sh
.claude/commands/: commit.md
docker/: Dockerfile  Dockerfile.official  Dockerfile.openwrt  Makefile.test  README.md  build-official.sh  build.sh  build_official.sh  patch_libgpiod_makefile.sh  test_ubus  test_ubus.c
docs/: architecture-main-tick.md  architecture.md  device_tree_overlay_theory.md  docker_build.md  gpio_button_design.md  i2c_enablement_guide.md  implementation-plan-adr0005.md  incident-mcp-secret-leak.md  openwrt_service.md  testing-architecture.md  ubus_system_architecture.md  usb_device_classes_overview.md  ux-page-enter-rejection.md
docs/adr/: 0001-multi-threaded-ui-and-event-handling.md  0002-single-threaded-main-tick.md  0003-ubus-worker-thread.md  0004-ubus-aware-process.md  0005-ultimate-threaded-architecture.md
docs/adr0005/: README.md  debug-001-dual-thread-no-button-event.md  gpio-hal.md  implementation-plan.md  onboarding.md  review-001-phase3-code-review.md  testing-architecture.md  thread-model.md  ui-design-spec.md
docs/adr0006/: README.md  architecture.md  context-libubox-vs-alternatives.md  implementation-plan.md  ui-design-spec.md  uloop-ui-design-notes.md
docs/design/: phase1-2-implementation.md  phase3-event-loop-and-ui.md
dts/rockchip/: Makefile  rk3528-nanopi-common.dtsi  rk3528.dtsi  rk3566-evb-mipitest-v10.dtsi  rk3566-evb1-ddr4-v10.dtsi  rk3566-evb2-lp4x-v10-eink.dts  rk3566-evb2-lp4x-v10.dtsi  rk3566-evb3-ddr3-v10.dtsi  rk3566-evb5-lp4x-v10.dtsi  rk3566-nanopi-r3-rev01.dts  rk3566-nanopi-r3-rev02.dts  rk3566-nanopi-r3-rev07.dts  rk3568-evb-rk628-hdmi2dsi-dual-ddr4-v10.dts  rk3568-evb-rk628-hdmi2gvi-ddr4-v10.dts  rk3568-evb-rk628-hdmi2lvds-ddr4-v10.dts  rk3568-evb-rk628-hdmi2lvds-dual-ddr4-v10.dts  rk3568-evb-rk628-rgb2gvi-ddr4-v10.dts  rk3568-evb-rk628-rgb2hdmi-ddr4-v10.dts  rk3568-evb-rk628-rgb2lvds-ddr4-v10.dts  rk3568-evb-rk628-rgb2lvds-dual-ddr4-v10.dts  rk3568-evb1-ddr4-v10.dtsi  rk3568-evb2-lp4x-v10.dtsi  rk3568-evb5-ddr4-v10.dtsi  rk3568-evb6-ddr3-v10.dtsi  rk3568-nanopi5-rev01.dts  rk3568-nanopi5-rev07.dts  rk3568m-serdes-evb-lp4x-v10-camera.dtsi  rk3568m-serdes-evb-lp4x-v10.dtsi  rk3568m-serdes-v1-evb-lp4x-v10.dtsi  rk356x.dtsi  rk3576-android.dtsi  rk3576-nanopi5-common.dtsi  rk3576-nanopi5-csi0-imx415.dtsi  rk3576-nanopi5-csi1-imx415.dtsi  rk3576-nanopi5-mipi-evb-v10.dtsi  rk3576-nanopi5-mipi-lcd-yx70.dtsi  rk3576-nanopi5-rev01.dts  rk3576-nanopi5-rev02.dts  rk3576-test5.dtsi  rk3576.dtsi  (+21 more)
src/: CMakeLists.txt  Makefile  README.md  anim.c  anim.h  build_in_docker.sh  build_test.sh  compile.sh  event_loop.c  event_queue.c  event_queue.h  fonts.c  fonts.h  gpio_button.c  gpio_button.h  main.c  nanohat-oled.init  page.h  page_controller.c  page_controller.h  ring_queue.c  ring_queue.h  service_config.c  service_config.h  sys_status.c  sys_status.h  test_jitter.c  u8g2_api.h  u8g2_port_linux.c  ubus_service.h  ui_controller.c  ui_controller.h  ui_draw.c  ui_draw.h  ui_thread.c  ui_thread.h
src/cmake/: toolchain-openwrt-aarch64.cmake
src/hal/: display_hal.h  display_hal_null.c  display_hal_ssd1306.c  gpio_hal.h  gpio_hal_libgpiod.c  gpio_hal_mock.c  time_hal.h  time_hal_real.c  u8g2_stub.c  u8g2_stub.h  ubus_hal.h  ubus_hal_mock.c  ubus_hal_real.c
src/pages/: page_gateway.c  page_home.c  page_network.c  page_services.c  page_services.h  page_settings.c  page_settings.h  pages.h
src_adr0005/: CMakeLists.txt  README.md  anim.h  build_in_docker.sh  event_loop.c  event_loop.h  event_queue.h  fonts.c  fonts.h  main.c  nanohat-oled  page.h  page_controller.c  result_queue.c  result_queue.h  ring_queue.c  service_config.c  sys_status.c  sys_status.h  task_queue.c  task_queue.h  u8g2_fonts_custom.c  u8g2_setup_custom.c  ubus_thread.c  ubus_thread.h  ui_controller.c  ui_controller.h  ui_thread.c  ui_thread.h
src_adr0005/hal/: display_hal_null.c  display_hal_ssd1306.c  gpio_hal_libgpiod.c  gpio_hal_mock.c  time_hal_real.c  u8g2_stub.c  u8g2_stub.h  ubus_hal.h  ubus_hal_mock.c  ubus_hal_real.c
src_adr0005/pages/: page_gateway.c  page_home.c  page_network.c  page_services.c  pages.h
src_adr0005/tests/: Makefile  README.md  test_event_flow  test_event_flow.c  test_event_queue  test_gpio_button  test_result_queue  test_result_queue.c  test_ring_queue  test_task_queue  test_task_queue.c  test_thread_safety  test_ubus_async  test_ubus_async.c  test_ui_controller  test_ui_controller.c  test_ui_thread_default  test_ui_thread_default.c
src_adr0005/tests/mocks/: display_mock.c  display_mock.h  eventfd_compat.h  gpio_mock.h  sys_status_mock.c  time_mock.c  ubus_mock.h
src_old/: Makefile  README.md  build_in_docker.sh  gpio_button.c  nanohat-oled.init  sys_status.c  sys_status.h  u8g2_port_linux.h  ubus_service.c
tests/: CMakeLists.txt  Makefile  README.md  test_event_flow.c  test_event_queue.c  test_gpio_button.c  test_gpio_event_uloop.c  test_ring_queue.c  test_runner  test_thread_safety.c  test_timer_basic.c  test_ubus_async_uloop.c  test_ui_controller.c  test_ui_refresh_policy.c  test_ui_thread_default.c  test_uloop_smoke.c
tests/mocks/: display_mock.c  display_mock.h  time_mock.h
tips/: enable_ap6212_wifi_on_openwrt.md
